--- a/.github/workflows/update-notebooks.yml
+++ b/.github/workflows/update-notebooks.yml
@@ -1,8 +1,8 @@
 name: Update Dynamic Notebooks
 
 on:
-  schedule:
-    - cron: '0 */24 * * 1'
+#  schedule:
+#    - cron: '0 */24 * * 1'
   workflow_dispatch:
 
 jobs:
