--- a/.github/workflows/update-pages.yml
+++ b/.github/workflows/update-pages.yml
@@ -24,14 +24,12 @@ jobs:
 
     - name: Run Script and Update Notebooks
       run: |
-        jupyter nbconvert --execute --to html earthquakes_demo.ipynb --debug
-        jupyter nbconvert --execute --to html fireballs_demo.ipynb --debug
-#       jupyter nbconvert --execute --to html blotter_demo.ipynb --debug
+        jupyter nbconvert --execute --to html notebooks/earthquakes_demo.ipynb
 
     - name: Commit and Push Changes
       run: |
         git config --local user.email "actions@github.com"
         git config --local user.name "GitHub Actions"
-        git add blotter_demo.html earthquakes_demo.html fireballs_demo.html
+        git add earthquakes_demo.html
         git commit -m "Updated html pages"
         git push origin main
