--- a/.github/workflows/update-pages.yml
+++ b/.github/workflows/update-pages.yml
@@ -28,8 +28,8 @@ jobs:
 
     - name: Commit and Push Changes
       run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Actions"
+        git config --global user.email "mshsu@calpoly.edu"
+        git config --global user.name "mshsu"
         git add actions_test.html
         git commit -am "Updated html pages"
         git push origin main
