--- a/.github/workflows/update-pages.yml
+++ b/.github/workflows/update-pages.yml
@@ -1,35 +1,40 @@
 name: update-pages
 
 on:
-#  schedule:
-#    - cron: '0 */24 * * 1'
-  workflow_dispatch:
+  push:
+    branches:
+      - main
 
 jobs:
-  update_notebooks:
-    name: Update notebooks with latest data
+  build:
     runs-on: ubuntu-latest
+
     steps:
-    - name: Checkout
-      uses: actions/checkout@v3
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-    - name: Setup Python
-      uses: actions/setup-python@v3
-      with:
-        python-version: '3.9'
-        cache: 'pip'
+      - name: Set up Python
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.8
 
-    - name: Install Dependencies
-      run: pip install -r requirements.txt
+      - name: Install Dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
 
-    - name: Run Script and Update Notebooks
-      run: |
-        jupyter nbconvert --execute --output-dir='notebooks/../' --to html notebooks/actions_test.ipynb
+      - name: Rerun Jupyter Notebook
+        run: |
+          jupyter nbconvert --execute notebooks/actions_test.ipynb --to notebook --inplace
 
-    - name: Commit and Push Changes
-      run: |
-        git config --local user.email "actions@github.com"
-        git config --local user.name "GitHub Actions"
-        git add actions_test.html
-        git commit -am "Updated html pages"
-        git push origin main
+      - name: Convert Jupyter Notebook to HTML
+        run: |
+          jupyter nbconvert --output-dir='notebooks/../' --to html notebooks/actions_test.ipynb
+
+      - name: Commit and Push Changes
+        run: |
+          git config --global user.name "Github Actions"
+          git config --global user.email "actions@github.com"
+          git add .
+          git commit -m "Update notebook and html"
+          git push
