--- a/.github/workflows/update-pages.yml
+++ b/.github/workflows/update-pages.yml
@@ -1,9 +1,9 @@
 name: update-pages
 
 on:
-  push:
-    branches:
-      - main
+#  schedule:
+#    - cron: '0 0 * * 1'  # Run every Monday at 00:00 UTC
+  workflow_dispatch:
 
 jobs:
   build:
